--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --margin: 40px;
+    --three-quarter-margin: calc(var(--margin) * 0.75);
+    --half-margin: calc(var(--margin) * 0.5);
+    --quarter-margin: calc(var(--margin) * 0.25);
+    --background: #F2F2F2;
+    --font-primary: #0065FC;
+    --font-secondary: #DEEBFF;
+}
+
 * {
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
@@ -12,86 +22,107 @@ body {
 
 main section,
 body>header {
-    margin: 0 40px 40px;
+    margin: 0 var(--margin) var(--margin);
 }
 
-/* HEADER */
-body>header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+h1, aside h2 {
+    font-size: 22px;
+    margin: var(--half-margin) 0;
 }
 
-body>header picture {
-    margin-left: 20px;
-    align-self: end;
+h2 {
+    font-size: 18px;
 }
 
-body>header img {
-    width: 100px;
+a {
+    text-decoration: none;
+    color: black;
 }
 
-body>header nav ul {
+ul {
     list-style: none;
     padding-left: 0;
-    display: flex;
-    flex-direction: row;
     margin: 0;
 }
 
-body>header nav ul li a {
-    padding: 30px 30px;
-    text-decoration: none;
+i {
+    color: var(--font-primary);
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.flex-gap{
+    gap: var(--half-margin);
+}
+.flex-justify-between {
+    justify-content: space-between;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+/* HEADER */
+header a {
+    padding: var(--three-quarter-margin);
     display: inline-block;
     border-top: transparent solid 2px;
-    font-weight: 500;
-    color: black;
 }
 
-body>header nav ul li a:visited {
-    color: black;
+nav a:hover {
+    color: var(--font-primary);
+    border-top-color: var(--font-primary);
 }
 
-body>header nav ul li:hover a {
-    color: #0065FC;
-    border-top: #0065FC solid 2px;
+header picture {
+    margin-left: var(--half-margin);;
+    align-self: flex-end;
 }
 
-/* Form */
+header img {
+    width: 100px;
+}
+
+/* SEARCH */
 form {
-    display: flex;
-    margin: 30px 0;
+    margin: var(--margin) 0;
 }
 
 form label {
-    display: flex;
-    padding: 0 20px;
-    justify-content: center;
-    align-items: center;
     border-radius: 15px 0 0 15px;
-    background-color: #F2F2F2;
+    background-color: var(--background);
+}
+
+form label i {
+    color: black;
 }
 
 form label,
 form input,
 form button {
     height: 50px;
-    border: solid 1px #F2F2F2;
+    border: solid 1px var(--background);
+    font-size: 18px;
     font-weight: bold;
-}
-
-form input {
-    padding: 0 20px;
-    border-left: 0;
-    border-right: 0;
+    padding: 0 var(--half-margin);
 }
 
 form button {
     border-radius: 0 15px 15px 0;
-    border-color: #0065FC;
-    background-color: #0065FC;
+    border-color: var(--font-primary);
+    background-color: var(--font-primary);
     color: white;
-    padding: 0 20px;
 }
 
 form button:hover {
@@ -103,42 +134,29 @@ form button.mobile {
     display: none;
 }
 
-/* Search */
-
 #search-filters {
-    display: flex;
     align-items: baseline;
-    flex-wrap: wrap;
 }
 
 #search-filters h2 {
-    font-size: 18px;
-    margin-right: 40px;
-}
-
-#search-filters ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
+    margin-right: var(--margin);
 }
 
 .search-filter {
-    display: flex;
     align-items: center;
     height: 50px;
     border-radius: 25px;
-    border: solid 2px #F2F2F2;
-    margin-right: 40px;
-    margin-bottom: 20px;
+    border: solid 2px var(--background);
+    margin: 0 var(--margin) var(--margin) 0;
 }
 
-.search-filter:last-of-type {
+.search-filter:last-child {
     margin-right: 0;
 }
 
 .search-filter p {
     margin: 0 15px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -147,29 +165,20 @@ form button.mobile {
 }
 
 .search-filters-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border-radius: 100%;
     height: 50px;
     width: 50px;
-    background-color: #DEEBFF;
+    background-color: var(--font-secondary);
     margin-left: -2px;
 }
 
-.search-filters-icon i {
-    color: #0065FC;
-}
-
 .search-filter:hover {
-    background-color: #DEEBFF;
-    border-color: #DEEBFF;
+    background-color: var(--font-secondary);
+    border-color: var(--font-secondary);
     cursor: pointer;
-    
 }
 
 #search-count {
-    display: inline-flex;
     align-items: baseline;
 }
 
@@ -177,29 +186,24 @@ form button.mobile {
     height: 25px;
     width: 25px;
     display: inline-flex;
-    border: #F2F2F2 solid 1px;
+    border: var(--background) solid 1px;
     border-radius: 100%;
-    justify-content: center;
-    align-items: center;
-    margin-right: 20px;
+    margin-right: var(--half-margin);
 }
 
 #search-count i {
-    color: #0065FC;
     font-size: 15px;
 }
 
 #search-count p {
-    margin: 20px 0 0 0;
+    margin: 0;
 }
 
+/* CARD */
 .card {
-    width: 30%;
-    border-radius: 20px;
-    text-align: center;
+    border-radius: var(--half-margin);
     background-color: white;
-    margin-bottom: 5%;
-    box-shadow: 0 0 10px 10px #F2F2F2;
+    box-shadow: 0 0 var(--quarter-margin) var(--quarter-margin) var(--background);
 }
 
 .card:hover {
@@ -209,36 +213,33 @@ form button.mobile {
 
 .card a {
     padding: 5px;
-    text-decoration: none;
-    color: black;
     height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
 .card img {
     width: 100%;
     height: 120px;
-    border: #F2F2F2 1px solid;
-    border-radius: 15px 15px 0 0;
+    border-radius: calc(var(--half-margin) - 5px) calc(var(--half-margin) - 5px) 0 0;
     object-fit: cover;
 }
 
 .card figure {
     margin: 0;
-    display: flex;
+}
+
+.card h3,
+.card p,
+.card-rate {
+    text-align: left;
+    margin: var(--quarter-margin) var(--quarter-margin) 0;
+}
+
+.card p {
+    margin-bottom: var(--quarter-margin);
 }
 
 .card h3 {
     font-size: 16px;
-    font-weight: bold;
-    text-align: left;
-    margin: 2% 2% 0;
-}
-
-.card p {
-    text-align: left;
-    margin: 2% 2% 0;
 }
 
 .card p span {
@@ -247,35 +248,52 @@ form button.mobile {
 
 .card-rate {
     text-align: left;
-    margin: auto 2% 2% 2%;
-}
-
-.card i[data-rate=true] {
-    color: #0065FC;
+    margin-top: auto;
 }
 
 .card i[data-rate=false] {
-    color: #F2F2F2;
+    color: var(--background);
 }
 
-.card-rate i {
-    color: #F2F2F2;
+/* accommodations */
+#accommodations-anchor .card {
+    width: 30%;
 }
 
-section h1,
-aside h2 {
-    font-size: 22px;
-    display: flex;
-    justify-content: space-between;
+#accommodations-anchor {
+    width: calc(66% - var(--quarter-margin));
+    padding: var(--three-quarter-margin);
+    background-color: var(--background);
+    border-radius: var(--half-margin);
+}
+
+#accommodations-anchor>div {
+    margin-bottom: var(--half-margin);
+}
+
+#accommodations-anchor p:last-child {
+    margin: auto 0 0;
+    font-weight: bold;
+}
+
+/* accommodations aside */
+aside {
+    width: calc(34% - var(--half-margin));
+    padding: var(--three-quarter-margin);
+    background-color: var(--background);
+    border-radius: var(--half-margin);
+}
+
+aside>div {
+    height: 100%;
 }
 
 aside .card {
-    width: 100%;
-    height: 150px;
+    height: 160px;
 }
 
-aside .card:last-child {
-    margin-bottom: 0;
+aside h2 i {
+    color: black;
 }
 
 aside .card a {
@@ -295,74 +313,16 @@ aside .card img {
 aside .card h3,
 aside .card p,
 aside .card-rate {
-    margin : 2% 0 0 20px;
-    width: calc(70% - 20px);
-}
-
-aside .card .card-content {
-    display: flex;
-    flex-direction: column;
-    margin-left: 2%;
-    width: 70%;
+    width: calc(70% - var(--half-margin));
 }
 
 aside .card .card-rate {
     margin-top: auto;
 }
 
-#accommodations {
-    display: flex;
-    column-gap: 30px;
-}
-
-#accommodations>div {
-    width: 66%;
-    padding: 30px;
-    background-color: #F2F2F2;
-    border-radius: 20px;
-}
-
-#accommodations>div>div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-#accommodations>aside {
-    width: 33%;
-    padding: 30px;
-    background-color: #F2F2F2;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-#accommodations>aside>div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
-
-#accommodations>div p:last-child {
-    margin: 0;
-}
-
-#accommodations div p:last-of-type a {
-    font-weight: bold;
-    text-decoration: none;
-    color: black;
-}
-
-#activities>div {
-    display: flex;
-    gap: 20px;
-}
-
+/* ACTIVITIES */
 .column .card {
-    width: 100%;
     height: 100%;
-    margin: 0;
 }
 
 .column .card a {
@@ -373,111 +333,70 @@ aside .card .card-rate {
     display: contents;
 }
 
+.column h3 {
+    margin: auto var(--half-margin);
+}
+
 .column .card img {
     height: calc(100% - 50px);
 }
 
-.column .card-content {
-    display: flex;
-    align-items: center;
-    height: 50px;
-}
-
-.column h3 {
-    line-height: 50px;
-    margin: 0 20px;
-}
-
 .column:nth-child(2) .card {
-    height: calc(60% - 10px);
-    margin-bottom: 20px;
+    height: calc(60% - var(--quarter-margin));
 }
 
 .column:nth-child(2) .card:last-of-type {
-    height: calc(40% - 10px);
-    margin-bottom: 0;
+    height: calc(40% - var(--quarter-margin));
 }
 
 .column:nth-child(4) .card {
-    height: calc(50% - 10px);
-    margin-bottom: 20px;
+    height: calc(50% - var(--quarter-margin));
 }
 
-.column:nth-child(4) .card:last-of-type {
-    margin-bottom: 0;
-}
-
+/* FOOTER */
 footer {
-    display: flex;
-    background-color: #F2F2F2;
-    padding: 40px;
+    background-color: var(--background);
+    padding: var(--margin);
 }
 
 footer>div {
     flex: 1;
 }
 
-footer h2 {
-    font-size: 18px;
+footer li:not(li:last-child) {
+    margin-bottom: var(--quarter-margin);
 }
 
-footer ul {
-    list-style: none;
-    padding: 0;
-}
-
-footer li {
-    margin-bottom: 10px;
-}
-
-footer a {
-    text-decoration: none;
-    color: black;
-}
-
-/* Tab */
+/* TAB */
 @media screen and (max-width: 992px) {
     #accommodations {
         flex-direction: column-reverse;
-        row-gap: 30px;
     }
 
-    #accommodations>div {
+    #accommodations>aside,
+    #accommodations-anchor {
         width: 100%;
-        padding: 4%;
     }
 
-    .card {
+    #accommodations-anchor .card {
         width: 48%;
-        margin-bottom: 4%;
     }
 
-    #accommodations>aside {
-        width: 100%;
-        padding: 4%;
+    .search-filter:not(.search-filter:last-child) {
+        margin-bottom: var(--half-margin);
     }
-
-    aside .card {
-        height: 150px;
-        width: 100%;
-    }
-    
 }
 
-/* Mobile */
+/* MOBILE */
 @media screen and (max-width: 768px) {
     body>header {
         flex-direction: column;
-        margin: 0 0 40px;
+        margin: 0 0 var(--margin);
     }
 
     body>header picture {
         align-self: center;
-        margin: 30px 0;
-    }
-
-    body>header nav {
-        width: 100%;
+        margin: var(--half-margin) 0;
     }
 
     body>header nav li {
@@ -486,15 +405,15 @@ footer a {
 
     body>header nav ul li a {
         width: 100%;
-        padding: 20px 0;
+        padding: var(--half-margin) 0;
         text-align: center;
         border-top: none;
-        border-bottom: #F2F2F2 solid 3px;
+        border-bottom: var(--background) solid 3px;
     }
 
     body>header nav ul li:hover a {
         border-top: none;
-        border-bottom: #0065FC solid 3px;
+        border-bottom: var(--font-primary) solid 3px;
     }
 
     form {
@@ -503,7 +422,8 @@ footer a {
     }
 
     form input {
-        margin-right: 45px;
+        margin-right: 50px;
+        outline: none;
         width: 100%;
     }
 
@@ -512,54 +432,44 @@ footer a {
     }
 
     form button.mobile {
-        display: inline-block;
+        display: block;
         position: absolute;
         right: 0;
     }
 
-    #search-filters h2 {
-        width: 100%;
-        margin-right: 0;
+    form i {
+        color: white;
     }
 
-    .card {
+    #accommodations-anchor .card,
+    #activities .card {
+        height: 216px;
+    }
+
+    #accommodations-anchor .card {
         width: 100%;
-        margin-bottom: 40px;
     }
 
     #accommodations {
         margin: 0;
     }
 
-    #accommodations aside {
+    #accommodations aside,
+    #accommodations-anchor {
         border-radius: 0;
-        padding: 40px;
+        padding: var(--margin);
     }
 
-    #accommodations>div {
-        border-radius: 0;
+    #accommodations-anchor {
         background-color: white;
-        padding: 40px;
     }
 
-    #activities>div {
-        flex-direction: column;
-        gap: 0;
-    }
-
-    #activities .card {
-        margin-bottom: 40px;
-    }
-
-    .column figure {
-        display: flex;
-    }
-
-    .column .card img {
-        height: 300px;
-    }
-
+    #activities>div,
     footer {
         flex-direction: column;
     }
+
+    footer li {
+        margin-bottom: var(--quarter-margin);
+    } 
 }
