--- a/css/style.css
+++ b/css/style.css
@@ -134,15 +134,15 @@ form button.mobile {
     display: none;
 }
 
-#search-filters {
+#search-filter {
     align-items: baseline;
 }
 
-#search-filters h2 {
+#search-filter h2 {
     margin-right: var(--margin);
 }
 
-.search-filter {
+.search-filter-button {
     align-items: center;
     height: 50px;
     border-radius: 25px;
@@ -150,21 +150,21 @@ form button.mobile {
     margin: 0 var(--margin) var(--margin) 0;
 }
 
-.search-filter:last-child {
+.search-filter-button:last-child {
     margin-right: 0;
 }
 
-.search-filter p {
+.search-filter-button p {
     margin: 0 15px;
     font-size: 18px;
     font-weight: bold;
 }
 
-.search-filter p:first-letter {
+.search-filter-button p:first-letter {
     text-transform: capitalize;
 }
 
-.search-filters-icon {
+.search-filter-icon {
     border-radius: 100%;
     height: 50px;
     width: 50px;
@@ -172,7 +172,7 @@ form button.mobile {
     margin-left: -2px;
 }
 
-.search-filter:hover {
+.search-filter-button:hover {
     background-color: var(--font-secondary);
     border-color: var(--font-secondary);
     cursor: pointer;
@@ -382,7 +382,7 @@ footer li:not(li:last-child) {
         width: 48%;
     }
 
-    .search-filter:not(.search-filter:last-child) {
+    .search-filter-button:not(.search-filter-button:last-child) {
         margin-bottom: var(--half-margin);
     }
 }
