--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ header a {
     border-top: transparent solid 2px;
 }
 
-nav a:hover {
+nav a:hover, nav li:nth-child(1) a {
     color: var(--font-primary);
     border-top-color: var(--font-primary);
 }
@@ -125,13 +125,12 @@ form button {
     color: white;
 }
 
-form button:hover {
-    cursor: pointer;
+form button::after {
+    content: 'Rechercher';
 }
 
-form button.mobile {
-    border-radius: 15px;
-    display: none;
+form button:hover {
+    cursor: pointer;
 }
 
 #search-filter {
@@ -411,7 +410,7 @@ footer li:not(li:last-child) {
         border-bottom: var(--background) solid 3px;
     }
 
-    body>header nav ul li:hover a {
+    body>header nav ul li:hover a, nav li:nth-child(1) a {
         border-top: none;
         border-bottom: var(--font-primary) solid 3px;
     }
@@ -422,23 +421,38 @@ footer li:not(li:last-child) {
     }
 
     form input {
-        margin-right: 50px;
+        margin-right: var(--half-margin);
+        padding: 15px;
         outline: none;
         width: 100%;
     }
 
     form button {
-        display: none;
-    }
-
-    form button.mobile {
         display: block;
         position: absolute;
-        right: 0;
+        right: 10px;
+        padding: 0 15px;
+        border-radius: 15px;
+    }
+
+    form button::after {
+        font-family: "Font Awesome 6 Free";
+        font-weight: 900;
+        content: '\f002';
     }
 
     form i {
         color: white;
+    }
+
+    .search-filter-button {
+        margin-right: var(--quarter-margin);
+    }
+
+    .search-filter-button p {
+        margin: 0 10px;
+        margin-right: var(--quarter-margin);
+        font-size: 16px;
     }
 
     #accommodations-anchor .card,
