home location and presentation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,6 @@
 @import "utils/variables";
+@import "utils/mixins";
 @import "base/base";
+@import "components/header";
+@import "components/button";
+@import "pages/home";
