--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,11 +5,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+header h1 {
     font-family: 'Shrikhand', cursive;
-}
-
-header {
-    margin-top: $margin;
-    margin-bottom: $half-margin;
 }
